--- a/Run.Rmd
+++ b/Run.Rmd
@@ -208,7 +208,9 @@ Knowing that the evaluation of OriGami NMR Test is affected by the definition of
 
 # 3 Evaluation of OriGami NMR Test
 
-We evaluated OriGami NMR Test for two different locations by conducting a study with 51 primary school students by determining and investigating their NMR competency scores. For both locations, we did an analysis of the test based on the ideas of the _classical test theory_: We did an item analysis (via determining the internal consistency, item-total correlation, and task difficulties) and estimated the reliability. Furthermore, we did a validation of the test against expert judgments by correlating the NMR competency test score with the experts’ score. The test evaluation gives the reader a first idea of the expressive power of OriGami NMR Test on the NMR competencies of children. It describes _one_ possible way to score the data and based on _assumptions_ that still need to be proven on the basis of a larger sample size (for details see: related [publication](https://osf.io/bjus2/)).
+We evaluated OriGami NMR Test for two different locations by conducting a study with 51 primary school students by determining and investigating their NMR competency scores. For both locations, we did an analysis of the test based on the ideas of the _classical test theory_: We did an item analysis (via item-total correlation and task difficulties) and estimated the reliability. Furthermore, we did a validation by correlating the test score with the expert judgments.
+
+The test evaluation gives the reader a first idea of the expressive power of OriGami NMR Test on the NMR competencies of children. It describes _one_ possible way to score the data and based on _assumptions_ that still need to be proven on the basis of a larger sample size (for details see: related [publication](https://osf.io/bjus2/)).
 
 In the following, we present the results for both locations separately - for the whole test and for Location Tasks individually as well as _with_ or _without_ process data included. At the end of the script, we offer a sensitivity analysis on the thresholds for scoring the accuracy and process data regarding their effects on the evaluation results.
 
