--- a/Run.Rmd
+++ b/Run.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "OriGami Navigational Map Reading Test"
-subtitle: "Open Reproducible Data, Score Calculation, and Test Evaluation"
+title: "Open Reproducible Data of the OriGami NMR Test for Navigational Map Reading Competencies"
+subtitle: "Open Reproducible Data & Evaluation Script"
 author: "J. Bistron, A. Schwering"
 date: "9/2/2021"
 runtime: shiny
@@ -48,19 +48,19 @@ library("DescTools")
 
 # 1 Introduction
 
-On the basis of our location-based game [OriGami](https://origami.ifgi.de) we created a test for measuring navigational map reading (NMR) competencies in children which we called _OriGami NMR Test_. OriGami NMR Test addresses competencies in orientating with a map in a real-world environment. We evaluated the test by conducting a study with 51 primary school students.
+On the basis of our location-based game [OriGami](https://origami.ifgi.de) we created a test for measuring navigational map reading (NMR) competencies in children aged six to ten which we called _OriGami NMR Test_. OriGami NMR Test addresses competencies in orientating with a map in a real-world environment. We evaluated the test by conducting a study with 51 primary school students.
 
-The following script gives the reader a detailed insight in:
+The following **evaluation script** gives the reader a detailed insight in:
 
-- The design of OriGami NMR Test and the NMR competency test score calculation (chapter 2).
+- The design of OriGami NMR Test and the test score calculation (chapter 2).
 
 - The evaluation of OriGami NMR Test on the basis of the data from the study (chapter 3).
 
-The aim of the script is to enhance the related [publication](https://osf.io/bjus2/) with details on the test instrument and its NMR competency score as well as on the test evaluation. The reader can use the script to reproduce the results of the publication or to develop an own OriGami NMR Test for his/her location or target group of interest (see `README.md` and run `Custom.Rmd` for more details).
+The aim of the script is to enhance the related [publication](https://psyarxiv.com/yps2n/) with details on the test instrument and the test score as well as on the test evaluation. The reader can use the script to reproduce the results of the publication or to develop an own OriGami NMR Test for his/her location or target group of interest (see `README.md` and run `Custom.Rmd` for more details).
 
 # 2 OriGami NMR Test
 
-OriGami NMR Test is designed for measuring navigational map reading (NMR) competencies and based on our location-based game OriGami (implementation details [on Github](https://github.com/origami-team/origami)). For evaluating OriGami NMR Test, we implemented it for two locations within the OriGami application. In the following, we describe the overall design of the test. 
+OriGami NMR Test is designed for measuring navigational map reading (NMR) competencies and based on our location-based game OriGami (implementation details [on Github](https://github.com/origami-team/origami)). For evaluating OriGami NMR Test, we implemented the test for two locations within the OriGami application. In the following, we describe the overall design of the test. 
 
 ## 2.1 Test Design
 
@@ -138,7 +138,7 @@ src <- lapply(z, function(z) knitr::knit_expand(file = "tables_and_figures/list0
 </details>
 _List 3: Instructions given to the participant during the test._
 
-For further information on the test execution, see the related [publication](https://osf.io/bjus2/).
+For further information on the test execution, see the related [publication](https://psyarxiv.com/yps2n/).
 
 ## 2.2 Data and Scoring
 
@@ -190,6 +190,8 @@ _Tab. 4: Calculated data from OriGami NMR Test data._
 
 In order to evaluate the user's performance in each task, we decided on using the data in forms of accuracy and process data (tab. 5). The _accuracy data_ contains the user’s task solving accuracy (i.e. calculated distances and angles between the "correct" and the user's solution). The _process data_ gives further information on the user's behavior while solving the tasks (his/her number of pan and zoom events, his/her route length walked, as well as the sum of his/her turning movements) and has the potential to describe the user's confidence in solving the tasks.
 
+The calculated distances (in m) were corrected as follows: We subtracted the GPS inaccuracy values from the distances. Then, we replaced negative results by zero. For each task and for each participant, we used the GPS inaccuracy value that was detected when the participant confirmed his or her task answer via OK-button.
+
 <details>
   <summary>_Click here_ for details on the task performance data:</summary>
 ```{r tab5, echo = FALSE}
@@ -202,7 +204,7 @@ _Tab. 5: Task performance data - accuracy and process data derived from the raw 
 
 ### 2.2.4 Test Scoring
 
-For evaluating the user's NMR competencies, we determine an _NMR competency test score_ based on the accuracy and process data. For the accuracy (representing the "correctness" of a solution) we score 1 point for a correct and 0 points for a wrong solution. In the case of a correct solution, we also take the process data into account (potentially representing the "confidence" in solving the task): We score 1 point for a "confident" and 0 points for an "unconfident" solution. The performance of a user in a certain task is therefore scored with: 0 points for a wrong solution, 1 point for a right but unconfident solution, and 2 points for a right and confident solution. In order to define a "right" or "wrong" as well as a "confident" or "unconfident" solution, we made some assumptions which are explained in detail in the related [publication](https://osf.io/bjus2/).
+For evaluating the user's NMR competencies, we determine an _NMR competency test score_ based on the accuracy and process data. For the accuracy (representing the "correctness" of a solution) we score 1 point for a correct and 0 points for a wrong solution. In the case of a correct solution, we also take the process data into account (potentially representing the "confidence" in solving the task): We score 1 point for a "confident" and 0 points for an "inconfident" solution. The performance of a user in a certain task is therefore scored with: 0 points for a wrong solution, 1 point for a right but inconfident solution, and 2 points for a right and confident solution. In order to define a "right" or "wrong" as well as a "confident" or "inconfident" solution, we made some assumptions which are explained in detail in the related [publication](https://psyarxiv.com/yps2n/).
 
 Knowing that the evaluation of OriGami NMR Test is affected by the definition of the thresholds, we added a manual _sensitivity analysis_ at the end of this script allowing the reader to manipulate the thresholds and investigating its effects on the test evaluation. Additionally, with the file `SensAnalysis_ParameterOpt.R` in this R project, the reader has access to the calculations on all possible evaluation results which can be achieved in the sensitivity analysis for all combinations of the thresholds in a certain range. Moreover, if interested in conducting the test at another location, the reader is free to change the thresholds according to the characteristics of the chosen location in `calculation/1_data_and_scoring.Rmd` (line: 94 - 103).
 
@@ -210,15 +212,15 @@ Knowing that the evaluation of OriGami NMR Test is affected by the definition of
 
 We evaluated OriGami NMR Test for two different locations by conducting a study with 51 primary school students by determining and investigating their NMR competency scores. For both locations, we did an analysis of the test based on the ideas of the _classical test theory_: We did an item analysis (via item-total correlation and task difficulties) and estimated the reliability. Furthermore, we did a validation by correlating the test score with the expert judgments.
 
-The test evaluation gives the reader a first idea of the expressive power of OriGami NMR Test on the NMR competencies of children. It describes _one_ possible way to score the data and based on _assumptions_ that still need to be proven on the basis of a larger sample size (for details see: related [publication](https://osf.io/bjus2/)).
+The test evaluation gives the reader a first idea of the expressive power of OriGami NMR Test on the NMR competencies of children. It describes _one_ possible way to score the data and based on _assumptions_ that still need to be proven on the basis of a larger sample size (for details see: related [publication](https://psyarxiv.com/yps2n/)).
 
 In the following, we present the results for both locations separately - for the whole test and for Location Tasks individually as well as _with_ or _without_ process data included. At the end of the script, we offer a sensitivity analysis on the thresholds for scoring the accuracy and process data regarding their effects on the evaluation results.
 
-Details on the description and interpretation of the results are presented in the corresponding [publication](https://osf.io/bjus2/). In this script the focus is on data details, the score calculations, and the test evaluation calculations.
+Details on the description and interpretation of the results are presented in the corresponding [publication](https://psyarxiv.com/yps2n/). In this script the focus is on data details, the score calculations, and the test evaluation calculations.
 
 ## 3.1 Study and Data Collection
 
-We conducted an evaluation study on OriGami NMR Test at two different locations: The Citizens Park in Senden and the Wildlife Park in Dülmen, Germany. 51 primary school students aged six to ten (age: MD = 8.33, SD = 1.11; 29 boys, 22 girls) participated in the test and their NMR competency score was calculated. Additionally, we asked experts to evaluate the children's NMR competencies based on their observations and the children's think-aloud statements. For details on the study and methodology, see the corresponding [publication](https://osf.io/bjus2/).
+We conducted an evaluation study on OriGami NMR Test at two different locations: The Citizens Park in Senden and the Wildlife Park in Dülmen, Germany. 51 primary school students aged six to ten (age: MD = 8.33, SD = 1.11; 29 boys, 22 girls) participated in the test and their NMR competency score was calculated. Additionally, we asked experts to evaluate the children's NMR competencies based on their observations and the children's think-aloud statements. For details on the study and methodology, see the corresponding [publication](https://psyarxiv.com/yps2n/).
 
 The tutorials conducted can be found here: [Tutorial Senden](https://app.origami.ifgi.de/play-game/game-detail/60bf2fb02e3801b40064c179), [Tutorial Dülmen](https://app.origami.ifgi.de/play-game/game-detail/60bf2ff72e3801b40064c17b).
 
@@ -230,7 +232,7 @@ _(If the links do not work, try another browser - e.g. Chrome)_
 
 The data of the study (`logfile.Rda` or `logfile.json`) can be found in the folder `data` in this R project. For data security purposes, we decided to change the timestamps and the participants' chiffres. The _experts judgments_ on the NMR competencies can be found in the file `experts.csv`: We asked the experts to evaluate each student's NMR performance on a scale from 0 to 10, whereas 0 stands for _no_ NMR competencies and 10 for _complete_ NMR competencies.
 
-## 3.2 Results on location 1 - Senden
+## 3.2 Results on location A - Senden
 _**Location 1:** Senden, Citizens Park_
 
 ```{r load logfile senden, echo=FALSE}
@@ -260,7 +262,7 @@ src <- lapply(z, function(z) knitr::knit_expand(file = "calculations/3_testeval_
 ```
 `r knitr::knit(text = unlist(src))`
 
-## 3.3 Results on location 2 - Dülmen
+## 3.3 Results on location B - Dülmen
 _**Location 2:** Dülmen, Wildlife Park_
 
 ```{r load logfile duelmen, echo=FALSE}
@@ -302,6 +304,6 @@ _Lobben, A. K. (2007). Navigational Map Reading: Predicting Performance and Iden
 
 _Hemmer, I., Hemmer, M., Kruschel, K., Neidhardt, E., Obermaier, G., & Uphues, R. (2013). Which Children Can Find a Way Through a Strange Town Using a Streetmap? - Results of an Empirical Study on Children's Orientation Competence. International Research in Geographical and Environmental Education, 22(1), 23-40._
 
-For further related literature, see the corresponding [publication](https://osf.io/bjus2/).
+For further related literature, see the corresponding [publication](https://psyarxiv.com/yps2n/).
 
 **Note:** We do not assume any liability for the websites and sources linked by us.
