--- a/tables_and_figures/tab13_cronbachsalpha_itemtotal.Rmd
+++ b/tables_and_figures/tab13_cronbachsalpha_itemtotal.Rmd
@@ -84,4 +84,61 @@
     `r format(round(alpha_dirc_drop,2), nsmall=2)`
   </td>
 </tr>
+<tr style="border: 1px solid grey;">
+  <td style="border: 1px solid grey;">**All Tasks**</td>
+  <td>
+    **Cronbach's alpha for all tasks:**
+    `r format(round(alpha_all,2), nsmall=2)`<br>
+    **Item correlation for each task**:<br>
+    LOC1(`r format(round(item_corr_all[[1]],2), nsmall=2)`)
+    LOC2(`r format(round(item_corr_all[[2]],2), nsmall=2)`)
+    LOC3(`r format(round(item_corr_all[[3]],2), nsmall=2)`)
+    LOC4(`r format(round(item_corr_all[[4]],2), nsmall=2)`)<br>
+    LOC5(`r format(round(item_corr_all[[5]],2), nsmall=2)`)
+    LOC6(`r format(round(item_corr_all[[6]],2), nsmall=2)`)
+    LNV1(`r format(round(item_corr_all[[7]],2), nsmall=2)`)
+    LNV2(`r format(round(item_corr_all[[8]],2), nsmall=2)`)<br>
+    LNV3(`r format(round(item_corr_all[[9]],2), nsmall=2)`)
+    LNV4(`r format(round(item_corr_all[[10]],2), nsmall=2)`)
+    LNV5(`r format(round(item_corr_all[[11]],2), nsmall=2)`)
+    LNV6(`r format(round(item_corr_all[[12]],2), nsmall=2)`)<br>
+    DM1(`r format(round(item_corr_all[[13]],2), nsmall=2)`)
+    DM2(`r format(round(item_corr_all[[14]],2), nsmall=2)`)
+    DM3(`r format(round(item_corr_all[[15]],2), nsmall=2)`)
+    DM4(`r format(round(item_corr_all[[15]],2), nsmall=2)`)<br>
+    DA1(`r format(round(item_corr_all[[17]],2), nsmall=2)`)
+    DA2(`r format(round(item_corr_all[[18]],2), nsmall=2)`)
+    DA3(`r format(round(item_corr_all[[19]],2), nsmall=2)`)
+    DA4(`r format(round(item_corr_all[[20]],2), nsmall=2)`)<br>
+    **Cronbach's alpha without `r dropped_tasks_all`:**
+    `r format(round(alpha_all_drop,2), nsmall=2)`
+  </td>
+  <td>
+    **Cronbach's alpha for all tasks:**
+    `r format(round(alpha_allc,2), nsmall=2)`<br>
+    **Item correlation for each task**:<br>
+    LOC1(`r format(round(item_corr_allc[[1]],2), nsmall=2)`)
+    LOC2(`r format(round(item_corr_allc[[2]],2), nsmall=2)`)
+    LOC3(`r format(round(item_corr_allc[[3]],2), nsmall=2)`)
+    LOC4(`r format(round(item_corr_allc[[4]],2), nsmall=2)`)<br>
+    LOC5(`r format(round(item_corr_allc[[5]],2), nsmall=2)`)
+    LOC6(`r format(round(item_corr_allc[[6]],2), nsmall=2)`)
+    LNV1(`r format(round(item_corr_allc[[7]],2), nsmall=2)`)
+    LNV2(`r format(round(item_corr_allc[[8]],2), nsmall=2)`)<br>
+    LNV3(`r format(round(item_corr_allc[[9]],2), nsmall=2)`)
+    LNV4(`r format(round(item_corr_allc[[10]],2), nsmall=2)`)
+    LNV5(`r format(round(item_corr_allc[[11]],2), nsmall=2)`)
+    LNV6(`r format(round(item_corr_allc[[12]],2), nsmall=2)`)<br>
+    DM1(`r format(round(item_corr_allc[[13]],2), nsmall=2)`)
+    DM2(`r format(round(item_corr_allc[[14]],2), nsmall=2)`)
+    DM3(`r format(round(item_corr_allc[[15]],2), nsmall=2)`)
+    DM4(`r format(round(item_corr_allc[[15]],2), nsmall=2)`)<br>
+    DA1(`r format(round(item_corr_allc[[17]],2), nsmall=2)`)
+    DA2(`r format(round(item_corr_allc[[18]],2), nsmall=2)`)
+    DA3(`r format(round(item_corr_allc[[19]],2), nsmall=2)`)
+    DA4(`r format(round(item_corr_allc[[20]],2), nsmall=2)`)<br>
+    **Cronbach's alpha without `r dropped_tasks_allc`:**
+    `r format(round(alpha_allc_drop,2), nsmall=2)`
+  </td>
+</tr>
 </table>
