--- a/calculations/2_testeval_items_reliability.Rmd
+++ b/calculations/2_testeval_items_reliability.Rmd
@@ -1,4 +1,4 @@
-OriGami NMR Test for the location `r location` is evaluated by executing an item analysis as well as by determining the split-half-reliability and validity of the test.
+GeoGami NMR assessment for the location `r location` is evaluated by executing an item analysis as well as by determining the split-half-reliability and validity of the assessment.
 
 #### Item Analysis and Cronbach's Alpha
 
@@ -28,9 +28,9 @@ _Tab. `r 14 - tabmin` - `r location`: Determined Task-Twins and Test-Halves via 
 
 #### Split-Half Reliability
 
-On the basis of the task difficulties, test-half scores for each participant are determined. In order to estimate the split-half reliability, the scores of test-half 1 and 2 are correlated. The results are corrected with the Spearman-Brown-Formula. _We assume two parallel test-halves._
+On the basis of the task difficulties, assessment half scores for each participant are determined. In order to estimate the split-half reliability, the scores of assessment half 1 and 2 are correlated. The results are corrected with the Spearman-Brown-Formula. _We assume two parallel assessment halves._
 
-```{r calculate test half scores and split half reliability{{z}}, echo=FALSE}
+```{r calculate test half scores and split half reliability{{z}}, echo=FALSE, warning=FALSE}
 source("calculations/2_testeval_items_reliability/03_splithalfreliability.R", local = knitr::knit_global())
 ```
 
@@ -38,4 +38,4 @@ source("calculations/2_testeval_items_reliability/03_splithalfreliability.R", lo
 src <- lapply(z, function(z) knitr::knit_expand(file = "tables_and_figures/tab15_splithalfreliability.Rmd"))
 ```
 `r knitr::knit(text = unlist(src))`
-_Tab. `r 15 - tabmin` - `r location`: Split-Half-Reliability Coefficients._
+_Tab. `r 15 - tabmin` - `r location`: Split-Half-Reliability Coefficients with p-values for Spearman's rho in brackets._
