--- a/calculations/4_testeval_sensanalysis.Rmd
+++ b/calculations/4_testeval_sensanalysis.Rmd
@@ -1,4 +1,4 @@
-In the following, the reader can manipulate the _thresholds_ (chapter 2.2.4) manually in order to see their effects on the test evaluation (reliability and validity). The thresholds describe the "line" between a user's correct and incorrect as well as a certain and uncertain task solution. The colors and symbols of the boxes visualize the test evaluation. Additionally, with the file `SensAnalysis_ParameterOpt.R` in this R project, the reader has access to the calculations on all possible evaluation results which can be achieved in the sensitivity analysis for all combinations of the thresholds in a certain range.
+In the following, the reader can manipulate the _thresholds_ (chapter 2.2.4) manually in order to see their effects on the assessment evaluation (reliability and validity). The thresholds describe the "line" between a user's correct and incorrect as well as a certain and uncertain task solution. The colors and symbols of the boxes visualize the test evaluation. Additionally, with the file `SensAnalysis_ParameterOpt.R` in this R project, the reader has access to the calculations on all possible evaluation results which can be achieved in the sensitivity analysis for all combinations of the thresholds in a certain range.
 
 ```{r sensitivity analysis ui d, echo = FALSE}
 ui_d <- dashboardPage(
